@@ -1,3 +1,15 @@
+2013-01-09  Rene Liebscher <R.Liebscher@gmx.de>
+
+	patch #7165 Add support for bitbanging GPIO lines using the Linux sysf GPIO interface
+	* doc/avrdude.texi,avrdude.1: added doc for linuxgpio 
+	* avrdude.conf.in: added template for linuxgpio programmer
+	* config_gram.y: pin numbers restricted to [PIN_MIN, PIN_MAX]
+	* pindefs.h: added PIN_MIN, PIN_MAX, removed unused LED_ON/OFF
+	* configure.ac: configure option enable-linuxgpio, print of enabled options
+	* linuxgpio.[ch]: new source for linuxgpio programmer
+	* Makefile.am: added linuxgpio to sources list
+	* pgm_type.c: added linuxgpio to programmer types list
+
 2013-01-08  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
 	* jtagmkI.c (jtagmkI_prmsg): replace a putchar() by putc(...stderr)
